# SpaceAI

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_future_phase_tables.py  003_add_covering_indexes.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/ai/: base_provider.py  ollama_provider.py
backend/app/api/: router.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py
backend/app/models/: audit_log.py  base.py  cleanup_action.py  dev_workspace.py  duplicate.py  exclusion_rule.py  file.py  folder.py  prediction.py  recommendation.py  scan.py  storage_snapshot.py
backend/app/repositories/: base.py  duplicate_repository.py  file_repository.py  folder_repository.py  scan_repository.py  snapshot_repository.py
backend/app/scanner/: __init__.py  batch_writer.py  crawler.py  exclusions.py  file_info.py  hasher.py  workspace_detector.py
backend/app/schemas/: analytics.py  cleanup.py  common.py  duplicate.py  file.py  folder.py  prediction.py  recommendation.py  scan.py  stale.py  workspace.py
backend/app/services/: analytics_service.py  audit_service.py  cleanup_service.py  duplicate_service.py  filesystem_service.py  post_scan_pipeline.py  prediction_models.py  prediction_service.py  recommendation_engine.py  recommendation_service.py  scanner_service.py  stale_file_service.py  workspace_service.py
backend/app/workers/: progress.py  task_manager.py
backend/benchmarks/: bench_duplicates.py  generate_dataset.py  run_benchmarks.py
backend/benchmarks/results/: latest.json
backend/docs/: duplicate-detection-strategy.md
backend/tests/: conftest.py
backend/tests/integration/: test_analytics_api.py  (+5 more)
docs/: adr.md  (+15 more)
(+58 files in other folders)
