[project]
name = "spaceai-backend"
version = "0.1.0"
description = "AI-powered storage optimization platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.11.1",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "greenlet==3.5.2",
    "alembic==1.14.1",
    "structlog==24.4.0",
    "httpx==0.28.1",
    "openai==1.82.0",
    "python-magic==0.4.27",
    "click==8.1.7",
    "anyio==4.7.0",
    "cachetools==5.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "factory-boy==3.3.1",
    "time-machine==2.16.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
]
docker = [
    "docker==7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/alembic/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "RUF"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
